MappingResolver Phase 3: delete dead PropertyResolution + properties + nested infrastructure
Confirmed dead by tests: PropertyResolution sealed type (Column/DynaFunction/EmbeddedColumn variants), the StoreResolution.properties map, the nested boolean, the forExtend factory, and the resolveProperty accessor were all populated by MappingResolver but never read by any consumer. Removing them: zero test deltas. -107 LOC net. Tests: 2683 / 69F / 89E / 19S - baseline preserved.